@@ -1,6 +1,7 @@
 2008-09-29 Luiz Armesto <luiz.armesto@gmail.com>
 
-	* src/gui/widgets/timeline.py: Renamed Bullet attribute amount to amountDue, and minor fixes.
+	* src/gui/widgets/timeline.py: Renamed Bullet attribute amount to
+	  amountDue, added refresh method to Timeline and minor fixes.
 	* src/gui/maindialog.py: Use new timeline widget now.
 	* src/lib/actions.py, src/lib/dbus_actions.py, src/daemon/dbus_manager.py: 
 	  Added new methods to dbus - get_interval_totals and get_interval_bills.
